// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Foundation/Colors Background smoke-test 1`] = `
<style>
  table {
            border-collapse: collapse;
          }
          td,
          th {
            border: 1px solid #dddddd;
            text-align: left;
            padding: 8px;
          }
          .preview {
            width: 50px;
            height: 50px;
          }
</style>
<table>
  <thead>
    <tr>
      <th>
        Variable Name
      </th>
      <th>
        Hex value
      </th>
      <th>
        Preview
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        --kd-color-background-ui-default
      </td>
      <td>
        #ffffff
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-background-ui-default)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-background-ui-soft
      </td>
      <td>
        #f1f0f0
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-background-ui-soft)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-background-ui-subtle
      </td>
      <td>
        #dcdad8
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-background-ui-subtle)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-background-ui-bold
      </td>
      <td>
        #898888
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-background-ui-bold)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-background-ui-strong
      </td>
      <td>
        #3d3c3c
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-background-ui-strong)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-background-brand
      </td>
      <td>
        #ff462d
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-background-brand)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-background-ui
      </td>
      <td>
        #898888
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-background-ui)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-background-ui-hover
      </td>
      <td>
        #29707a
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-background-ui-hover)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-background-ui-pressed
      </td>
      <td>
        #29707a
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-background-ui-pressed)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-background-primary
      </td>
      <td>
        #29707a
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-background-primary)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-background-primary-hover
      </td>
      <td>
        #2f808c
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-background-primary-hover)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-background-primary-pressed
      </td>
      <td>
        #163d43
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-background-primary-pressed)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-background-secondary
      </td>
      <td>
        #3d3c3c
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-background-secondary)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-background-secondary-hover
      </td>
      <td>
        #6d6d6d
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-background-secondary-hover)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-background-secondary-pressed
      </td>
      <td>
        #161616
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-background-secondary-pressed)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-background-destructive
      </td>
      <td>
        #cc1800
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-background-destructive)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-background-destructive-hover
      </td>
      <td>
        #ff2306
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-background-destructive-hover)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-background-destructive-pressed
      </td>
      <td>
        #9b1200
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-background-destructive-pressed)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-background-focus
      </td>
      <td>
        #29707a
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-background-focus)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-background-inverse
      </td>
      <td>
        #ffffff
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-background-inverse)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-background-inverse-hover
      </td>
      <td>
        #ddf0f3
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-background-inverse-hover)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-background-accent-subtle
      </td>
      <td>
        #f9f9f9
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-background-accent-subtle)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-background-accent-ui
      </td>
      <td>
        #aadcd3
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-background-accent-ui)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-background-accent-ui-light
      </td>
      <td>
        #e4f4f1
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-background-accent-ui-light)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-background-accent-primary
      </td>
      <td>
        #ff462d
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-background-accent-primary)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-background-accent-secondary
      </td>
      <td>
        #29707a
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-background-accent-secondary)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-background-accent-tertiary
      </td>
      <td>
        #dcdad8
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-background-accent-tertiary)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-background-success
      </td>
      <td>
        #1fa452
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-background-success)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-background-success-light
      </td>
      <td>
        #e5f7eb
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-background-success-light)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-background-error
      </td>
      <td>
        #cc1800
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-background-error)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-background-error-light
      </td>
      <td>
        #f7e6e6
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-background-error-light)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-background-warning
      </td>
      <td>
        #f5c400
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-background-warning)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-background-warning-light
      </td>
      <td>
        #fef9e5
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-background-warning-light)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-background-informational
      </td>
      <td>
        #1473ff
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-background-informational)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-background-informational-light
      </td>
      <td>
        #e9f2ff
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-background-informational-light)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-background-disabled
      </td>
      <td>
        #dcdad8
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-background-disabled)"
      >
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Foundation/Colors Borders smoke-test 1`] = `
<style>
  table {
            border-collapse: collapse;
          }
          td,
          th {
            border: 1px solid #dddddd;
            text-align: left;
            padding: 8px;
          }
          .preview {
            width: 50px;
            height: 50px;
          }
</style>
<table>
  <thead>
    <tr>
      <th>
        Variable Name
      </th>
      <th>
        Hex value
      </th>
      <th>
        Preview
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        --kd-color-border-default
      </td>
      <td>
        #898888
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-border-default)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-border-light
      </td>
      <td>
        #dcdad8
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-border-light)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-border-primary
      </td>
      <td>
        #3d3c3c
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-border-primary)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-border-secondary
      </td>
      <td>
        #6d6d6d
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-border-secondary)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-border-ui
      </td>
      <td>
        #898888
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-border-ui)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-border-ui-hover
      </td>
      <td>
        #29707a
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-border-ui-hover)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-border-ui-disabled
      </td>
      <td>
        #a8a5a6
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-border-ui-disabled)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-border-tertiary
      </td>
      <td>
        #29707a
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-border-tertiary)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-border-tertiary-bold
      </td>
      <td>
        #163d43
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-border-tertiary-bold)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-border-brand
      </td>
      <td>
        #ff462d
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-border-brand)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-border-focus
      </td>
      <td>
        #29707a
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-border-focus)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-border-destructive
      </td>
      <td>
        #cc1800
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-border-destructive)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-border-inverse
      </td>
      <td>
        #ffffff
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-border-inverse)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-border-hover
      </td>
      <td>
        #6d6d6d
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-border-hover)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-border-pressed
      </td>
      <td>
        #161616
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-border-pressed)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-border-disabled
      </td>
      <td>
        #a8a5a6
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-border-disabled)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-border-accent-springgreen
      </td>
      <td>
        #4cdd84
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-border-accent-springgreen)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-border-accent-spruce-light
      </td>
      <td>
        #3fadbd
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-border-accent-spruce-light)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-border-success
      </td>
      <td>
        #1fa452
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-border-success)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-border-error
      </td>
      <td>
        #cc1800
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-border-error)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-border-warning
      </td>
      <td>
        #f5c400
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-border-warning)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-border-informational
      </td>
      <td>
        #1473ff
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-border-informational)"
      >
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Foundation/Colors Palette smoke-test 1`] = `
<style>
  table {
            border-collapse: collapse;
          }
          td,
          th {
            border: 1px solid #dddddd;
            text-align: left;
            padding: 8px;
          }
          .preview {
            width: 50px;
            height: 50px;
          }
</style>
<p>
  <strong>
    Note:
  </strong>
  Do
  <strong>
    <em>
      not
    </em>
  </strong>
  use Palette
        tokens directly. Only use contextual tokens in designs and code.
</p>
<table>
  <thead>
    <tr>
      <th>
        Variable Name
      </th>
      <th>
        Hex value
      </th>
      <th>
        Preview
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        --kd-color-spruce-100
      </td>
      <td>
        #081618
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-spruce-100)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-spruce-90
      </td>
      <td>
        #0e272a
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-spruce-90)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-spruce-80
      </td>
      <td>
        #163d43
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-spruce-80)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-spruce-70
      </td>
      <td>
        #205961
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-spruce-70)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-spruce-60
      </td>
      <td>
        #29707a
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-spruce-60)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-spruce-50
      </td>
      <td>
        #2f808c
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-spruce-50)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-spruce-40
      </td>
      <td>
        #3797a4
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-spruce-40)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-spruce-30
      </td>
      <td>
        #3fadbd
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-spruce-30)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-spruce-20
      </td>
      <td>
        #8ecfd9
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-spruce-20)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-spruce-10
      </td>
      <td>
        #ddf0f3
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-spruce-10)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-skye-100
      </td>
      <td>
        #091714
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-skye-100)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-skye-90
      </td>
      <td>
        #102824
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-skye-90)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-skye-80
      </td>
      <td>
        #193f38
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-skye-80)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-skye-70
      </td>
      <td>
        #23564d
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-skye-70)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-skye-60
      </td>
      <td>
        #2c6e61
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-skye-60)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-skye-50
      </td>
      <td>
        #38887b
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-skye-50)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-skye-40
      </td>
      <td>
        #44a895
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-skye-40)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-skye-30
      </td>
      <td>
        #5fbeac
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-skye-30)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-skye-20
      </td>
      <td>
        #aadcd3
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-skye-20)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-skye-10
      </td>
      <td>
        #e4f4f1
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-skye-10)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-deepforest-100
      </td>
      <td>
        #02150d
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-deepforest-100)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-deepforest-90
      </td>
      <td>
        #042315
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-deepforest-90)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-deepforest-80
      </td>
      <td>
        #074127
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-deepforest-80)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-deepforest-70
      </td>
      <td>
        #0a5734
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-deepforest-70)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-deepforest-60
      </td>
      <td>
        #0d7546
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-deepforest-60)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-deepforest-50
      </td>
      <td>
        #0f8853
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-deepforest-50)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-deepforest-40
      </td>
      <td>
        #13a865
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-deepforest-40)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-deepforest-30
      </td>
      <td>
        #15be72
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-deepforest-30)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-deepforest-20
      </td>
      <td>
        #19db83
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-deepforest-20)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-deepforest-10
      </td>
      <td>
        #a3f4cf
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-deepforest-10)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-springgreen-100
      </td>
      <td>
        #03140a
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-springgreen-100)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-springgreen-90
      </td>
      <td>
        #072914
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-springgreen-90)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-springgreen-80
      </td>
      <td>
        #0d4422
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-springgreen-80)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-springgreen-70
      </td>
      <td>
        #10592c
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-springgreen-70)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-springgreen-60
      </td>
      <td>
        #187e3f
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-springgreen-60)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-springgreen-50
      </td>
      <td>
        #1b904b
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-springgreen-50)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-springgreen-40
      </td>
      <td>
        #1fa452
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-springgreen-40)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-springgreen-30
      </td>
      <td>
        #24c060
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-springgreen-30)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-springgreen-20
      </td>
      <td>
        #4cdd84
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-springgreen-20)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-springgreen-10
      </td>
      <td>
        #b6f1cd
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-springgreen-10)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-warmred-100
      </td>
      <td>
        #410700
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-warmred-100)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-warmred-90
      </td>
      <td>
        #6a0c00
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-warmred-90)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-warmred-80
      </td>
      <td>
        #9b1200
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-warmred-80)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-warmred-70
      </td>
      <td>
        #cc1800
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-warmred-70)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-warmred-60
      </td>
      <td>
        #ff2306
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-warmred-60)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-warmred-50
      </td>
      <td>
        #ff462d
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-warmred-50)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-warmred-40
      </td>
      <td>
        #ff6b57
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-warmred-40)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-warmred-30
      </td>
      <td>
        #ff9688
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-warmred-30)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-warmred-20
      </td>
      <td>
        #fec1b9
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-warmred-20)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-warmred-10
      </td>
      <td>
        #fededa
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-warmred-10)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-earth-100
      </td>
      <td>
        #161412
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-earth-100)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-earth-90
      </td>
      <td>
        #2d2824
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-earth-90)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-earth-80
      </td>
      <td>
        #3f3833
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-earth-80)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-earth-70
      </td>
      <td>
        #565049
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-earth-70)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-earth-60
      </td>
      <td>
        #70655b
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-earth-60)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-earth-50
      </td>
      <td>
        #8b7d71
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-earth-50)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-earth-40
      </td>
      <td>
        #9e9287
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-earth-40)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-earth-30
      </td>
      <td>
        #bfb7b0
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-earth-30)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-earth-20
      </td>
      <td>
        #dcd8d4
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-earth-20)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-earth-10
      </td>
      <td>
        #f5f4f3
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-earth-10)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-cloud-100
      </td>
      <td>
        #171511
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-cloud-100)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-cloud-90
      </td>
      <td>
        #29271f
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-cloud-90)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-cloud-80
      </td>
      <td>
        #3c382d
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-cloud-80)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-cloud-70
      </td>
      <td>
        #534e3f
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-cloud-70)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-cloud-60
      </td>
      <td>
        #6e6854
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-cloud-60)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-cloud-50
      </td>
      <td>
        #8a826a
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-cloud-50)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-cloud-40
      </td>
      <td>
        #a49d89
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-cloud-40)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-cloud-30
      </td>
      <td>
        #bdb8a9
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-cloud-30)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-cloud-20
      </td>
      <td>
        #dddad3
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-cloud-20)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-cloud-10
      </td>
      <td>
        #f2f1ee
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-cloud-10)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-darkstone-100
      </td>
      <td>
        #161616
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-darkstone-100)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-darkstone-90
      </td>
      <td>
        #272727
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-darkstone-90)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-darkstone-80
      </td>
      <td>
        #3d3c3c
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-darkstone-80)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-darkstone-70
      </td>
      <td>
        #515151
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-darkstone-70)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-darkstone-60
      </td>
      <td>
        #6d6d6d
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-darkstone-60)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-darkstone-50
      </td>
      <td>
        #898888
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-darkstone-50)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-darkstone-40
      </td>
      <td>
        #a8a5a6
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-darkstone-40)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-darkstone-30
      </td>
      <td>
        #bcbab8
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-darkstone-30)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-darkstone-20
      </td>
      <td>
        #dcdad8
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-darkstone-20)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-darkstone-10
      </td>
      <td>
        #f9f9f9
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-darkstone-10)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-warmgray-100
      </td>
      <td>
        #141313
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-warmgray-100)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-warmgray-90
      </td>
      <td>
        #2d2b2b
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-warmgray-90)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-warmgray-80
      </td>
      <td>
        #423f3f
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-warmgray-80)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-warmgray-70
      </td>
      <td>
        #565353
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-warmgray-70)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-warmgray-60
      </td>
      <td>
        #746f6f
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-warmgray-60)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-warmgray-50
      </td>
      <td>
        #8d8888
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-warmgray-50)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-warmgray-40
      </td>
      <td>
        #a5a0a0
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-warmgray-40)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-warmgray-30
      </td>
      <td>
        #c1bebe
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-warmgray-30)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-warmgray-20
      </td>
      <td>
        #d9d7d7
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-warmgray-20)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-warmgray-10
      </td>
      <td>
        #f1f0f0
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-warmgray-10)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-coolgray-100
      </td>
      <td>
        #121415
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-coolgray-100)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-coolgray-90
      </td>
      <td>
        #222527
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-coolgray-90)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-coolgray-80
      </td>
      <td>
        #383e41
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-coolgray-80)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-coolgray-70
      </td>
      <td>
        #4b5357
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-coolgray-70)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-coolgray-60
      </td>
      <td>
        #667076
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-coolgray-60)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-coolgray-50
      </td>
      <td>
        #79858b
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-coolgray-50)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-coolgray-40
      </td>
      <td>
        #97a1a6
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-coolgray-40)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-coolgray-30
      </td>
      <td>
        #b6bdc0
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-coolgray-30)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-coolgray-20
      </td>
      <td>
        #d5d9db
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-coolgray-20)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-coolgray-10
      </td>
      <td>
        #edf1f2
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-coolgray-10)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-neutral-white
      </td>
      <td>
        #ffffff
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-neutral-white)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-success
      </td>
      <td>
        #1fa452
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-success)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-success-light
      </td>
      <td>
        #e5f7eb
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-success-light)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-error
      </td>
      <td>
        #cc1800
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-error)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-error-light
      </td>
      <td>
        #f7e6e6
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-error-light)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-warning
      </td>
      <td>
        #f5c400
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-warning)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-warning-light
      </td>
      <td>
        #fef9e5
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-warning-light)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-informational
      </td>
      <td>
        #1473ff
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-informational)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-informational-light
      </td>
      <td>
        #e9f2ff
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-informational-light)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-neutral-white
      </td>
      <td>
        #ffffff
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-neutral-white)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-neutral-black
      </td>
      <td>
        #000000
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-neutral-black)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-neutral-webgray
      </td>
      <td>
        #fafafc
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-neutral-webgray)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-transparent
      </td>
      <td>
        rgba(0, 0, 0, 0)
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-transparent)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-light-opacity-50
      </td>
      <td>
        rgba(255, 255, 255, 0.5)
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-light-opacity-50)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-dark-opacity-50
      </td>
      <td>
        rgba(61, 60, 60, 0.5)
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-dark-opacity-50)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-dark-opacity-40
      </td>
      <td>
        rgba(61, 60, 60, 0.4)
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-dark-opacity-40)"
      >
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Foundation/Colors Text smoke-test 1`] = `
<style>
  table {
            border-collapse: collapse;
          }
          td,
          th {
            border: 1px solid #dddddd;
            text-align: left;
            padding: 8px;
          }
          .preview {
            width: 50px;
            height: 50px;
          }
</style>
<table>
  <thead>
    <tr>
      <th>
        Variable Name
      </th>
      <th>
        Hex value
      </th>
      <th>
        Preview
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        --kd-color-text-primary
      </td>
      <td>
        #3d3c3c
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-text-primary)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-text-primary-hover
      </td>
      <td>
        #6d6d6d
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-text-primary-hover)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-text-primary-pressed
      </td>
      <td>
        #161616
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-text-primary-pressed)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-text-secondary
      </td>
      <td>
        #6d6d6d
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-text-secondary)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-text-tertiary
      </td>
      <td>
        #29707a
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-text-tertiary)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-text-tertiary-bold
      </td>
      <td>
        #163d43
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-text-tertiary-bold)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-text-eyebrow
      </td>
      <td>
        #2f808c
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-text-eyebrow)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-text-brand
      </td>
      <td>
        #ff462d
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-text-brand)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-text-inversed
      </td>
      <td>
        #ffffff
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-text-inversed)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-text-destructive
      </td>
      <td>
        #cc1800
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-text-destructive)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-text-disabled
      </td>
      <td>
        #a8a5a6
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-text-disabled)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-text-link
      </td>
      <td>
        #29707a
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-text-link)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-text-link-hover
      </td>
      <td>
        #2f808c
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-text-link-hover)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-text-pressed
      </td>
      <td>
        #163d43
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-text-pressed)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-text-placeholder
      </td>
      <td>
        #898888
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-text-placeholder)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-text-success
      </td>
      <td>
        #1fa452
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-text-success)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-text-error
      </td>
      <td>
        #cc1800
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-text-error)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-text-warning
      </td>
      <td>
        #f5c400
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-text-warning)"
      >
      </td>
    </tr>
    <tr>
      <td>
        --kd-color-text-informational
      </td>
      <td>
        #1473ff
      </td>
      <td class="preview"
          style="background-color: var(--kd-color-text-informational)"
      >
      </td>
    </tr>
  </tbody>
</table>
`;
